--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+:root {
+  --branding: #6264fa;
+}
 body {
   font-family: "Montserrat", sans-serif;
 }
@@ -8,17 +11,54 @@ h2 {
 }
 p {
   font-weight: 300;
+  line-height: 30px;
 }
+img {
+  border-radius: 8px;
+}
+
 .hero {
   text-align: center;
   padding: 200px 15px;
+  background-image: url(/images/background.png);
 }
 .btn-branding {
-  background-color: #6264fa;
+  background-color: var(--branding);
   color: white;
   padding: 14px 32px;
   font-weight: 700;
   border-radius: 30px;
   letter-spacing: 1px;
   text-transform: uppercase;
+}
+.text-info {
+  text-align: center;
+}
+.sub-title {
+  font-weight: 600;
+  font-size: 30px;
+}
+.btn-branding-outline {
+  color: var(--branding);
+  border: solid var(--branding);
+  border-radius: 30px;
+  padding: 10px 30px;
+}
+
+.project-description {
+  padding: 8px;
+  padding-top: 30px;
+}
+@media (max-width: 700px) {
+  .project-description {
+    font-weight: 500px;
+    text-align: center;
+    font-size: 15px;
+    padding: 14px;
+  }
+}
+@media (max-width: 500px) {
+  img {
+    margin-bottom: 0px;
+  }
 }
