--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 :root {
   --branding: #6264fa;
+  --background-color: #e3ecff;
 }
 body {
   font-family: "Montserrat", sans-serif;
 }
-
 h2 {
   font-size: 26px;
   font-weight: 500;
@@ -16,7 +16,13 @@ p {
 img {
   border-radius: 8px;
 }
+nav {
+  background-color: white;
+}
 
+.about-section img {
+  width: 400px;
+}
 .hero {
   text-align: center;
   padding: 200px 15px;
@@ -31,6 +37,18 @@ img {
   letter-spacing: 1px;
   text-transform: uppercase;
 }
+.btn-branding-outline {
+  color: var(--branding);
+  border: solid var(--branding);
+  border-radius: 30px;
+  padding: 10px 30px;
+}
+.btn-about {
+  text-decoration: underline;
+}
+.btn-about:hover {
+  color: var(--branding);
+}
 .text-info {
   text-align: center;
 }
@@ -38,13 +56,6 @@ img {
   font-weight: 600;
   font-size: 30px;
 }
-.btn-branding-outline {
-  color: var(--branding);
-  border: solid var(--branding);
-  border-radius: 30px;
-  padding: 10px 30px;
-}
-
 .project-description {
   padding: 8px;
   padding-top: 30px;
