--- a/style.css
+++ b/style.css
@@ -31,9 +31,14 @@ nav {
 }
 
 .background-image {
-  background-image: url(/images/background-1.png), url(/images/background-2.png);
-  background-position: right bottom, left top;
-  background-repeat: no-repeat, no-repeat;
+  background: linear-gradient(
+      rgba(255, 255, 255, 0.95),
+      rgba(255, 255, 255, 0.95)
+    ),
+    url(images/back-4.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 .btn-branding {
   background-color: var(--branding);
