--- a/style.css
+++ b/style.css
@@ -95,6 +95,19 @@ nav {
   padding: 8px;
   padding-top: 30px;
 }
+.skills-section {
+  padding: 40px;
+  padding-top: 60px;
+}
+.skill-visual {
+  display: flex;
+  padding: 30px;
+}
+.skill-visual img {
+  width: 50%;
+  display: block;
+  margin: auto;
+}
 @media (max-width: 700px) {
   .content {
     text-align: center;
@@ -109,5 +122,13 @@ nav {
 @media (max-width: 500px) {
   img {
     margin-bottom: 0px;
+  }
+}
+@media (max-with: 700px) {
+  .skill-visual {
+    display: grid;
+
+    width: 30px;
+    opacity: 1.3;
   }
 }
