--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ img {
 nav {
   background-color: white;
   color: var(--branding);
+  margin: 25px;
 }
 
 .background-image {
@@ -90,6 +91,15 @@ nav {
 .sub-title {
   font-weight: 600;
   font-size: 30px;
+}
+.navbar {
+  transition: all 0.5s ease;
+}
+.nar-sticky {
+  background: #ffffff;
+  margin-top: 0px;
+  box-shadow: 0px 3px 10px 0px rgb(63 58 100 / 8%);
+  padding: 0;
 }
 .project-description {
   padding: 8px;
