--- a/style.css
+++ b/style.css
@@ -28,15 +28,13 @@ img {
 nav {
   background-color: white;
   color: var(--branding);
-  margin: 25px;
 }
 
 .background-image {
   background: linear-gradient(
-      rgba(255, 255, 255, 0.95),
-      rgba(255, 255, 255, 0.95)
-    ),
-    url(images/back-4.jpg);
+    rgba(255, 255, 255, 0.95),
+    rgba(255, 255, 255, 0.95)
+  );
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -104,6 +102,7 @@ nav {
 .project-description {
   padding: 8px;
   padding-top: 30px;
+  margin-right: 47px;
 }
 .skills-section {
   padding: 40px;
