--- a/style.css
+++ b/style.css
@@ -5,11 +5,27 @@
 body {
   font-family: "Montserrat", sans-serif;
 }
+footer .bg {
+  background: var(--background-color);
+}
 footer .contact-box {
   background: var(--background-color);
   padding: 40px 80px;
   border-radius: 10px;
   margin: 50px;
+}
+footer .container {
+  background: var(--background-color);
+  padding: 100px 15px;
+  justify-content: space-between;
+  align-items: center;
+}
+footer p {
+  margin-bottom: 1px;
+}
+.footer-left a {
+  font-size: 25px;
+  text-decoration: none;
 }
 h2 {
   font-size: 26px;
@@ -63,6 +79,10 @@ nav {
 .bi-mouse2 {
   font-size: 500px;
   justify-content: space-around;
+}
+.contact-list .nav-links {
+  text-decoration: none;
+  list-style: none;
 }
 .contact-page {
   background: url(/images/background-dots.png);
