--- a/style.css
+++ b/style.css
@@ -125,6 +125,13 @@ nav {
   padding-top: 30px;
   margin-right: 47px;
 }
+.projects .col-md-4 {
+  text-align: center;
+  padding-top: 40px;
+}
+.projects .col-md-8 {
+  padding-left: 193px;
+}
 .skills-section {
   padding: 40px;
   padding-top: 60px;
